public/new_design/css/responsive.css
/* ... */
@media only screen and (max-width: 550px) {

    #cooperative-chairman div{
        width: 100% !important;
    }
    #cooperative-chairman span{
        left: 140px !important;
        top: 230px !important;
    }
    #cooperative-chairman div:first-child{
        margin-bottom: 30px;
        height: 455px !important;

    }

    .advantages-block {
        grid-template-columns: repeat(2, 1fr);
    }
    .mt-bottom-bar .mt-top-social {
        display: none;
    }
    .program-block-width {
        width: 70%;
    }

    #product-masonry #product-filter {
        font-size: 12px;
    }

    #product-masonry #product-filter li:before {
        padding: 0 10px;
    }

    #product-masonry .masonry-list > li {
        width: 100%;
    }
}

@media only screen and (max-width: 479px) {
    .program-block-width {
        width: 80%;
    }
    .banner-1 .holder {
        padding: 15px;
    }
    .program-detail-block-width {
        width: 40%;
    }


    #mt-main > div > div > div > ul > li {
        width: 49%;
    }

    .banner-frame h2 {
        font-size: 18px;
        line-height: 22px;
        letter-spacing: 0;
    }

    .banner-frame .btn-shop {
        margin: 0;
    }

    .banner-5 .texts {
        top: 15px;
        left: 15px;
        right: 15px;
        bottom: 15px;
        max-width: 100%;
    }

    .banner-5 .texts h3 {
        word-break: break-all;
    }

    .banner-5 .texts .title {
        font-size: 12px;
    }

    .banner-14 h3 {
        font-size: 40px;
        line-height: 50px;
        word-break: break-all;
    }

    .banner-17 .holder {
        padding: 20px 15px;
    }

    .banner-17 h4 {
        margin: 18% 1%;
        font-size: 40px;
    }

    .banner-18 .holder {
        padding: 17px 20px 20px;
    }

    .banner-21 .holder {
        padding: 19px 20px 20px;
    }

    .product-holder {
        text-align: center;
    }

    .product-holder .product-4 {
        width: 276px;
        text-align: left;
        margin: 0 auto 50px;
    }

    .mt-main-slider h1 {
        font-size: 45px;
        line-height: 55px;
    }

    .mt-main-slider h2 {
        font-size: 30px;
        line-height: 35px;
    }

    .mt-main-slider .text {
        padding: 70px 0 20px;
    }

    .mt-main-slider .txt {
        margin: 0 auto 40px;
    }

    .mt-producttabs .producttabs {
        font-size: 11px;
    }

    .mt-producttabs .producttabs li {
        margin: 0 5px 0 0;
        padding: 0 0 0 5px;
    }

    .mt-producttabs .mt-productrow > li {
        width: 100%;
    }

    .mt-productlisthold > li {
        width: 100%;
    }
}
@media only screen and (max-width: 576px) {
     #my-brands a{
        width: 40% !important;
     }
	#mt-main > div > div > div > ul > li {
		width: 48%;
	}
    #insta-posts div {
        justify-content: center !important;
    }
    #insta-posts .insta-post{
        width: 100% !important;
        max-height: 410px !important;
        min-width: 314px !important;
    }
}
@media only screen and (max-width: 424px) {
    .comment-photo {
        background-size: initial !important;
        width: 50px !important;
        height: 50px !important;
        border-radius: 50% !important;
    }
    #gap-card {
        width: 100% !important;
    }
    #gap-card-photo {
        width: 100% !important;
        height: 100% !important;
        background-size: 100% 100% !important;
    }
    #my-brands a{
        width: 46% !important;
    }
    #insta-posts .insta-post{
        width: 315px !important;
        max-height: 410px !important;
        min-width: 314px !important;
    }
    #youtube-reviews iframe {
        width: 100% !important;
        margin-top: 20px;
    }

    #first-block-info {
        order: 2;
        width: 100% !important;
    }

    #first-block-img {
        width: 100% !important;
    }
    #second-block-info {
        order: 2;
        width: 100% !important;
    }

    #second-block-img {
        width: 100% !important;
    }
    .advantages-block {
        grid-template-columns: 1fr;
    }
}

@media only screen and (max-width: 375px) {

	#mt-main > div > div > div > ul > li {
		width: 97%;
	}
    .register-types-btn {
        min-width: 100%;
    }
    .program-block-width {
        width: 100%;
    }
    .more-btn {
        margin: 2rem auto 0 auto;
    }

}

